# DataConversionAgent

./: .gitignore  README.md
agent/: README.md  pyproject.toml
agent/clients/example-client/: mapping_workbook.csv  profile_summary.json  project.yaml
agent/clients/example-client/knowledge/: example-project-rule.md
agent/dct/: build_dictionary.py  dictionary.yaml
agent/evals/: golden_questions.yaml  run_evals.py
agent/knowledge/decisions/: duplicate-contact-survivorship.md  sentinel-dates.md
agent/src/conversion_agent/: __init__.py  agent.py  backend.py  cli.py  config.py  knowledge.py  tools.py
agent/src/conversion_agent/cli/: __init__.py  __main__.py  apply.py  common.py  guidance.py  mapping.py
agent/src/conversion_agent/core/: __init__.py  errors.py  settings.py
agent/src/conversion_agent/guidance/: __init__.py  backends.py  service.py  session.py  tools.py
agent/src/conversion_agent/mapping/: apply.py  cli.py  llm.py  match.py  model.py  service.py  validation.py  workbook.py  writeback.py
agent/src/conversion_agent/projects/: __init__.py  filesystem.py  models.py  repository.py
agent/src/conversion_agent/resources/: __init__.py  catalog.py  knowledge.py
agent/tests/: conftest.py  test_current_behavior.py  test_documentation_examples.py
agent/tests/cli/: test_compatibility.py
agent/tests/core/: test_settings.py
agent/tests/distribution/: test_wheel.py
agent/tests/guidance/: test_backends.py  test_live_smoke.py  test_live_smoke_collection.py  test_session.py  test_session_isolation.py  test_tools.py
agent/tests/mapping/: test_apply.py  test_service.py  test_validation.py  test_writeback.py
agent/tests/projects/: test_filesystem_repository.py
agent/tests/resources/: test_knowledge.py
(+11 files in other folders)
