[project]
name = "conversion-agent"
version = "0.1.0"
description = "EPL data conversion guidance agent (Phase 1: internal Q&A)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
